--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,10 +25,12 @@
         "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
         "react/react-in-jsx-scope": 0,
         "no-console": 0,
+        "no-alert": 0,
         "react/state-in-constructor": 0,
         "indent": 0,
         "linebreak-style": 0,
         "react/prop-types": 0,
+        "no-unused-expressions": ["warn", { "allowShortCircuit": true, "allowTernary": true }],
         "jsx-a11y/click-events-have-key-events": 0,
         "react/function-component-definition": 0,
         "import/prefer-default-export": 0,
