--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "firebase": "^9.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
-    "react-toastify": "^9.0.8",
+   
     "vite": "^3.1.0",
     "vite-plugin-eslint": "^1.8.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
