--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
-   
+    "react-to-pdf": "^0.0.14",
     "vite": "^3.1.0",
     "vite-plugin-eslint": "^1.8.1"
   },
