--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-to-pdf": "^0.0.14",
+    "sweetalert2": "^11.6.2",
     "vite": "^3.1.0",
     "vite-plugin-eslint": "^1.8.1"
   },
